# E-Library

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  E-Library.md  README.md  conftest.py  coverage.json  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: load-testing.md
docs/adrs/: ADR-0001-postgresql-full-text-search.md  ADR-0002-stored-search-vectors.md  ADR-0003-work-edition-copy.md  ADR-0004-derived-availability.md  ADR-0005-borrow-row-locking.md  ADR-0006-ready-holds-reserve-copy.md  ADR-0007-pagination-strategy.md  ADR-0008-domain-services-own-mutations.md  ADR-0009-selectors-own-reads.md  ADR-0010-domain-events-outbox.md  ADR-0011-branch-support.md  ADR-0012-django-htmx-drf.md  ADR-0013-tenant-boundary-shared-spine.md  ADR-0014-work-grain-search.md  ADR-0015-facets-cap-and-count.md  ADR-0016-hold-queue-serialization.md  ADR-0017-opaque-cursors.md  ADR-0018-api-auth-tiers.md  ADR-0019-reader-privacy.md
docs/policies/: api-versioning.md  caching.md  compliance.md  data-retention.md  security.md  slos.md  sso.md  subprocessors.md
docs/runbooks/: disaster-recovery.md  incident-response.md  monitoring.md  staging.md
elibrary/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
locale/es/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
ops/monitoring/: README.md  alert.rules.yml
scripts/: backup.sh  ci.sh  restore.sh  restore_drill.py  uptime_check.sh
scripts/load/: bench_search.py  search_smoke.js
static/css/: app.css
templates/: base.html  status.html
templates/billing/: dashboard.html
templates/catalog/: empty.html  search.html  work_detail.html
templates/catalog/partials/: _facet_panel.html  _search_results.html  _work_card.html
templates/circulation/: account.html  settings.html
templates/digital/: reader.html
templates/legal/: privacy.html  terms.html
templates/librarian/: dashboard.html  import_detail.html  imports.html  reports.html
templates/mfa/: challenge.html  enroll.html
templates/notifications/: unsubscribe.html
templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html  signup_org.html
